cip-macros/tests/ui/cip_instance_wrong_type_class_code.stderr
error: The field 'class_code' must be of type 'ClassCode'
 --> tests/ui/cip_instance_wrong_type_class_code.rs:6:17
  |
6 |     class_code: u8,
  |                 ^^

error[E0405]: cannot find trait `CipInstance` in this scope
 --> tests/ui/cip_instance_wrong_type_class_code.rs:3:1
  |
3 | #[cip_instance]
  | ^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `cip_instance` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `ClassCode` in this scope
 --> tests/ui/cip_instance_wrong_type_class_code.rs:3:1
  |
3 | #[cip_instance]
  | ^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `cip_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
