cip-macros/tests/ui/cip_instance_wrong_type_class_code.rs
use cip_macros::cip_instance;

#[cip_instance]
struct MyInstance {
    instance_id: u16,
    class_code: u8,
}

fn main() {}
